objects/LOA__c.object
<CustomObject>
    <description>Junction Object between Projects and Contracts ABC</description>
    <fields>
        <fullName>Contract_ABC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract ABC</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>LOAs</relationshipLabel>
        <relationshipName>LOAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract_ABC__r.End__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>Contract_ABC__r.Historical_Linker__c</formula>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract_ABC__r.Start__c</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>Text( Contract_ABC__r.Type__c )</formula>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <formula>Contract_ABC__r.Invoice_Contact__r.FirstName &amp;&quot; &quot; &amp; Contract_ABC__r.Invoice_Contact__r.LastName</formula>
        <label>Invoice Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated_Amount__c</fullName>
        <formula>Contract_ABC__r.Negotiated_Amount__c</formula>
        <label>Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Date__c</fullName>
        <label>Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Project__r.Product__r.Name</formula>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <formula>Text( Project__r.Project_Phase__c )</formula>
        <label>Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>LOAs</relationshipLabel>
        <relationshipName>LOAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Contract_ABC__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>LOA</label>
    <nameField>
        <displayFormat>LOA-{0000000}</displayFormat>
        <label>LOA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>